# velma_core_ve_hand

./: CMakeLists.txt  package.xml
master/: ports.xml
src/: abstract_behavior.h  abstract_state.h  behavior_normal.cpp  input_data.h  master_service.cpp  state_normal.cpp
